Add notebooks create field

--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -15,6 +15,18 @@
   <%= @account.secret_access_key %>
 </p>
 
+<p>
+  <b>notebooks:</b>
+  <% @account.notebooks.each do |notebook| %>
+    <p>
+      <%= "#{notebook.name} #{notebook.description}" %>
+    </p>
+  <%end%>
+
+</p>
+
+<%= render @account.notebooks.build %>
 
 <%= link_to 'Edit', edit_account_path(@account) %> |
 <%= link_to 'Back', accounts_path %>
+
